--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,16 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "tortilla"
+path = "src/lib.rs"
+
+[[bin]]
+name = "tortilla"
+path = "src/main.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3"
+clap = "2.33"
