--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "tortilla"
 version = "0.1.0"
 authors = ["Erick Hernandez Curiel <Erick.HernandezCuriel@mx.bosch.com>"]
+description = "tortilla is a wrapper around solc"
+keywords = ["solidity", "solc", "ethereum"]
+readme = "README.md"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -21,3 +24,4 @@ tempfile = "3"
 clap = "2.33"
 ethereum-types = "0.7"
 ethabi = "8.0"
+notify = "4.0"
